// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnSelector NOT Read-only Loads and renders column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={false}
  name="column"
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div>
    <div
      className="d-flex mb-2 mt-2 parameter-margin"
    >
      <button
        className="mc-select-all content-4 t-d-gray"
        disabled={false}
        onClick={[Function]}
      >
        All
      </button>
      <button
        className="mc-select-none content-4 t-d-gray"
        disabled={false}
        onClick={[Function]}
      >
        None
      </button>
    </div>
    <div
      className="container list-wrapper"
    >
      <div
        className="row list-scroll"
      >
        <div
          className="checkbox-container"
          key="foo"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="foo"
            disabled={false}
            name="column[foo]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            foo
          </span>
        </div>
        <div
          className="checkbox-container"
          key="bar"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="bar"
            disabled={false}
            name="column[bar]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            bar
          </span>
        </div>
        <div
          className="checkbox-container"
          key="baz"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="baz"
            disabled={false}
            name="column[baz]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            baz
          </span>
        </div>
        <div
          className="checkbox-container"
          key="wow"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="wow"
            disabled={false}
            name="column[wow]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            wow
          </span>
        </div>
        <div
          className="checkbox-container"
          key="word wrap"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="word wrap"
            disabled={false}
            name="column[word wrap]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            word wrap
          </span>
        </div>
        <div
          className="checkbox-container"
          key="ok then"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="ok then"
            disabled={false}
            name="column[ok then]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            ok then
          </span>
        </div>
      </div>
    </div>
  </div>
</ColumnSelector>
`;

exports[`ColumnSelector Read-only Loads and renders disabled column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={true}
  name="column"
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div>
    <div
      className="d-flex mb-2 mt-2 parameter-margin"
    >
      <button
        className="mc-select-all content-4 t-d-gray"
        disabled={true}
        onClick={[Function]}
      >
        All
      </button>
      <button
        className="mc-select-none content-4 t-d-gray"
        disabled={true}
        onClick={[Function]}
      >
        None
      </button>
    </div>
    <div
      className="container list-wrapper"
    >
      <div
        className="row list-scroll"
      >
        <div
          className="checkbox-container"
          key="foo"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="foo"
            disabled={true}
            name="column[foo]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            foo
          </span>
        </div>
        <div
          className="checkbox-container"
          key="bar"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="bar"
            disabled={true}
            name="column[bar]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            bar
          </span>
        </div>
        <div
          className="checkbox-container"
          key="baz"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={true}
            data-name="baz"
            disabled={true}
            name="column[baz]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            baz
          </span>
        </div>
        <div
          className="checkbox-container"
          key="wow"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="wow"
            disabled={true}
            name="column[wow]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            wow
          </span>
        </div>
        <div
          className="checkbox-container"
          key="word wrap"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="word wrap"
            disabled={true}
            name="column[word wrap]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            word wrap
          </span>
        </div>
        <div
          className="checkbox-container"
          key="ok then"
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <input
            checked={false}
            data-name="ok then"
            disabled={true}
            name="column[ok then]"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="t-d-gray checkbox-content content-3"
          >
            ok then
          </span>
        </div>
      </div>
    </div>
  </div>
</ColumnSelector>
`;
